Fix bug in anchor jumping too far

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,10 @@ body {
   position: relative;
 }
 
+:target {
+  padding-top: 60px;
+}
+
 .photo-credit {
   padding-top: 0.3em;
   font-size: 0.6em;
@@ -75,4 +79,6 @@ body {
   object-fit:cover;
   height: 12vw;
   width:12vw;
+   padding-left: 0em;
+    padding-top: 0px;
 }
